# valent

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  NEWS  README.md  REUSE.toml  cspell.json  index.html  meson.build  meson.options  meson_options.txt  style.css  valent.doap  valent.flatpakref  valent.flatpakrepo
data/: ca.andyholmes.Valent-autostart.desktop.in.in  ca.andyholmes.Valent.desktop.in.in  ca.andyholmes.Valent.gschema.xml  ca.andyholmes.Valent.service.in  ca.andyholmes.Valent.xml  meson.build
data/appdata/: ca.andyholmes.Valent.appdata.xml.in.in  meson.build
data/firewalld/: ca.andyholmes.Valent.xml  meson.build
data/gsettings/: ca.andyholmes.Valent.Device.gschema.xml  ca.andyholmes.Valent.Plugin.gschema.xml  ca.andyholmes.Valent.gschema.xml  ca.andyholmes.valent.device.gschema.xml  ca.andyholmes.valent.gschema.xml  ca.andyholmes.valent.plugin.gschema.xml  meson.build
data/metainfo/: ca.andyholmes.Valent.metainfo.xml.in.in  meson.build
doc/sdk/: meson.build  protocol.py  urlmap.js  valent-docs.xml  valent.toml.in
doc/sdk/xml/: gtkdocentities.ent.in  meson.build
help/: meson.build  valent-html.xsl
help/C/: .yelp-tools.cfg  device-name.page  device-pair.page  device-preferences-other.page  device-preferences-status.page  device-preferences-sync.page  device-setup.page  device-unpair.page  index.page  introduction.page  legal.xml  plugins-battery.page  plugins-clipboard.page  plugins-connectivity_report.page  plugins-contacts.page  plugins-findmyphone.page  plugins-lock.page  plugins-mousepad.page  plugins-mpris.page  plugins-notification.page  plugins-presenter.page  plugins-runcommand.page  plugins-sftp.page  plugins-share.page  plugins-sms.page  plugins-systemvolume.page  plugins-telephony.page  plugins.page  tools-input-remote.page  tools-media-remote.page  tools-messages-window.page  tools-share-dialog.page  troubleshooting-firewall.page  valent.pot
help/templates/: plugin.page.tmpl  troubleshooting.page.tmpl
src/: main.c  meson.build
src/libvalent/: gconstructor.h  meson.build  valent.h
src/libvalent/clipboard/: libvalent-clipboard.h  meson.build  valent-clipboard-adapter.c  valent-clipboard-adapter.h  valent-clipboard-source.c  valent-clipboard-source.h  valent-clipboard.c  valent-clipboard.h
src/libvalent/contacts/: libvalent-contacts.gresource.xml  libvalent-contacts.h  meson.build  valent-contact-cache-private.h  valent-contact-cache.c  valent-contact-cache.h  valent-contact-list.c  valent-contact-list.h  valent-contact-store-provider.c  valent-contact-store-provider.h  valent-contact-store.c  valent-contact-store.h  valent-contact-utils.c  valent-contact-utils.h  valent-contact.c  valent-contact.h  valent-contacts-adapter.c  valent-contacts-adapter.h  valent-contacts.c  valent-contacts.h  valent-eds.h
src/libvalent/core/: libvalent-core-types.h  libvalent-core.gresource.xml  libvalent-core.h  meson.build  valent-application-plugin.c  valent-application-plugin.h  valent-application.c  valent-application.h  valent-certificate.c  valent-certificate.h  valent-channel-service.c  valent-channel-service.h  valent-channel.c  valent-channel.h  valent-component-private.h  valent-component.c  valent-component.h  valent-context.c  valent-context.h  valent-data-source.c  valent-data-source.h  valent-data.c  valent-data.h  valent-debug.c  valent-debug.h.in  valent-device-impl.c  valent-device-manager.c  valent-device-manager.h  valent-device-plugin.c  valent-device-plugin.h  valent-device-private.h  valent-device-transfer.c  valent-device-transfer.h  valent-device.c  valent-device.h  valent-extension.c  valent-extension.h  valent-global.c  valent-global.h  valent-macros.h  (+24 more)
src/libvalent/device/: libvalent-device.c  libvalent-device.gresource.xml  libvalent-device.h  libvalent-device.plugin  meson.build  valent-certificate.c  valent-certificate.h  valent-channel-service.c  valent-channel-service.h  valent-channel.c  valent-channel.h  valent-device-common.h  valent-device-impl.c  valent-device-impl.h  valent-device-manager.c  valent-device-manager.h  valent-device-plugin.c  valent-device-plugin.h  valent-device-private.h  valent-device-transfer.c  valent-device-transfer.h  valent-device.c  valent-device.h  valent-packet-input-stream.c  valent-packet-input-stream.h  valent-packet.c  valent-packet.h
src/libvalent/input/: libvalent-input.h  (+8 more)
src/plugins/: meson.build
src/tests/: gdkpixbuf-test-init.sh  gsettings-test-init.sh  meson.build  plugin_fuzz.sh  plugin_schemas.sh
tests/: meson.build
tests/data/: plugin-clipboard.json  plugin-lan.json  plugin-mousepad.json  plugin-mpris.json  plugin-runcommand.json  plugin-share.json
tests/extra/: ci-runner.sh  cppcheck.cfg  cppcheck.supp  cspell-valent.txt  cspell.gnome.json  gsettings-test-init.sh  lsan.supp  potfiles-check.sh  setup.cfg  template.test.in  tsan.supp
tests/fixtures/: glibtest.py  libvalent-test.gresource.xml  libvalent-test.h  meson.build  mock-plugin.c  mock.plugin  packetless-plugin.c  packetless-plugin.h  packetless.plugin  valent-mock-application-plugin.c  valent-mock-application-plugin.h  valent-mock-channel-service.c  valent-mock-channel-service.h  valent-mock-channel.c  valent-mock-channel.h  valent-mock-clipboard-adapter.c  valent-mock-clipboard-adapter.h  valent-mock-contacts-adapter.c  valent-mock-contacts-adapter.h  valent-mock-device-gadget.c  valent-mock-device-gadget.h  valent-mock-device-plugin.c  valent-mock-device-plugin.h  valent-mock-device-preferences-group.c  valent-mock-device-preferences-group.h  valent-mock-device-preferences-page.c  valent-mock-device-preferences-page.h  valent-mock-input-adapter.c  valent-mock-input-adapter.h  valent-mock-media-adapter.c  valent-mock-media-adapter.h  valent-mock-media-player.c  valent-mock-media-player.h  valent-mock-messages-adapter.c  valent-mock-messages-adapter.h  valent-mock-mixer-adapter.c  valent-mock-mixer-adapter.h  valent-mock-network-monitor.c  valent-mock-network-monitor.h  valent-mock-notifications-adapter.c  (+9 more)
tests/libvalent/: meson.build
tests/plugins/: meson.build
(+3746 files in other folders)
