# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: Andy Holmes <andrew.g.r.holmes@gmail.com>


# Documentation & Introspection
option('documentation',
  description: 'Build API documentation',
         type: 'boolean',
        value: false,
)

option('introspection',
  description: 'Build introspection data',
         type: 'boolean',
        value: true,
)

option('firewalld',
  description: 'Install firewalld configuration file',
         type: 'boolean',
        value: false,
)


# Development
option('profile',
  description: 'Build profile (default, devel)',
         type: 'combo',
        value: 'default',
      choices: ['default', 'devel'],
)

option('tests',
  description: 'Build tests',
         type: 'boolean',
        value: false,
)

option('fuzz_tests',
  description: 'Enable fuzzing tests',
         type: 'boolean',
        value: true,
)

option('tracing',
  description: 'Enable trace logging',
         type: 'boolean',
        value: false,
)


# Plugins
option('plugins',
  description: 'Build plugins',
         type: 'boolean',
        value: true,
)

option('plugin_battery',
  description: 'Enable Battery plugin',
         type: 'boolean',
        value: true,
)

option('plugin_bluez',
  description: 'Enable Bluetooth Networking (Bluez)',
         type: 'boolean',
        value: false,
)

option('plugin_clipboard',
  description: 'Enable Clipboard plugin',
         type: 'boolean',
        value: true,
)

option('plugin_connectivity_report',
  description: 'Enable Connectivity Report plugin',
         type: 'boolean',
        value: true,
)

option('plugin_contacts',
  description: 'Enable Contacts plugin',
         type: 'boolean',
        value: true,
)

option('plugin_eds',
  description: 'Enable Evolution Data Server support',
         type: 'boolean',
        value: true,
)

option('plugin_fdo',
  description: 'Enable freedesktop.org support',
         type: 'boolean',
        value: true,
)

option('plugin_findmyphone',
  description: 'Enable FindMyPhone plugin',
         type: 'boolean',
        value: true,
)

option('plugin_gtk',
  description: 'Enable Extra GTK support',
         type: 'boolean',
        value: true,
)

option('plugin_lan',
  description: 'Enable LAN Networking',
         type: 'boolean',
        value: true,
)

option('plugin_lock',
  description: 'Enable Lock plugin',
         type: 'boolean',
        value: true,
)

option('plugin_mousepad',
  description: 'Enable Mousepad plugin',
         type: 'boolean',
        value: true,
)

option('plugin_mpris',
  description: 'Enable MPRIS plugin',
         type: 'boolean',
        value: true,
)

option('plugin_notification',
  description: 'Enable Notifications plugin',
         type: 'boolean',
        value: true,
)

option('plugin_photo',
  description: 'Enable Photo plugin',
         type: 'boolean',
        value: true,
)

option('plugin_ping',
  description: 'Enable Ping plugin',
         type: 'boolean',
        value: true,
)

option('plugin_presenter',
  description: 'Enable Presenter plugin',
         type: 'boolean',
        value: true,
)

option('plugin_pulseaudio',
  description: 'Enable PulseAudio support',
         type: 'boolean',
        value: true,
)

option('plugin_runcommand',
  description: 'Enable RunCommand plugin',
         type: 'boolean',
        value: true,
)

option('plugin_sftp',
  description: 'Enable SFTP plugin',
         type: 'boolean',
        value: true,
)

option('plugin_share',
  description: 'Enable Share plugin',
         type: 'boolean',
        value: true,
)

option('plugin_sms',
  description: 'Enable SMS plugin',
         type: 'boolean',
        value: true,
)

option('plugin_systemvolume',
  description: 'Enable SystemVolume plugin',
         type: 'boolean',
        value: true,
)

option('plugin_telephony',
  description: 'Enable Telephony plugin',
         type: 'boolean',
        value: true,
)

option('plugin_xdp',
  description: 'Enable libportal support',
         type: 'boolean',
        value: true,
)

