# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: Andy Holmes <andrew.g.r.holmes@gmail.com>

help_sources = [
  'device-name.page',
  'device-pair.page',
  'device-unpair.page',
  'index.page',
  'introduction.page',
  'legal.xml',
  'plugins.page',
  'plugins-battery.page',
  'plugins-clipboard.page',
  'plugins-connectivity_report.page',
  'plugins-contacts.page',
  'plugins-findmyphone.page',
  'plugins-lock.page',
  'plugins-mousepad.page',
  'plugins-mpris.page',
  'plugins-notification.page',
  'plugins-photo.page',
  'plugins-presenter.page',
  'plugins-runcommand.page',
  'plugins-sftp.page',
  'plugins-share.page',
  'plugins-sms.page',
  'plugins-systemvolume.page',
  'plugins-telephony.page',
  'tools-input-remote.page',
  'tools-media-remote.page',
  'troubleshooting-firewall.page',
]

help_media = [
  # UI Icons
  'figures/ca.andyholmes.Valent.svg',
  'figures/channel-secure-symbolic.svg',
  'figures/document-edit-symbolic.svg',
  'figures/entry-apply-symbolic.svg',
  'figures/open-menu-symbolic.svg',
  'figures/view-more-symbolic.svg',
  'figures/view-refresh-symbolic.svg',

  # Screenshots
  'figures/screenshots/device-page.png',
  'figures/screenshots/device-preferences.png',
  'figures/screenshots/image-missing.png',
  'figures/screenshots/main-preferences.png',
  'figures/screenshots/main-window.png',
]

gnome.yelp(meson.project_name(),
  sources: help_sources,
    media: help_media,
)
